--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,13 +7,19 @@
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="main.js" type="module"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <main>
+        <header><h1>Személyek adatkezelője!</h1></header>
         <article>
-
-            <div class="lista"></div>
+            <div class="d-flex justify-content-around adat_hozzaAd"></div>
+            <div class="container mt-3 lista"></div>
         </article>
+       
+
 
     </main>
 </body>
