--- a/frontend/public.html
+++ b/frontend/public.html
@@ -7,7 +7,7 @@
     <title>Mogyoródi Balázs</title>
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="main.js" type="module"></script>
+    <script src="publicMain.js" type="module"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -15,6 +15,11 @@
 
 <body>
     <main>
+        <nav>
+            <div>Admin</div>
+            <div>publikus</div>
+            <div>kiválasztott</div>
+        </nav>
         <header>
             <h1>Személyek adatkezelője!</h1>
         </header>
