--- a/frontend/public.html
+++ b/frontend/public.html
@@ -16,16 +16,17 @@
 <body>
     <main>
         <nav>
-            <div>Admin</div>
-            <div>publikus</div>
-            <div>kiválasztott</div>
+            <ul>
+                <li><a href="index.html">Admin</a></li>
+                <li><a href="public.html">Publikus</a></li>
+            </ul>
         </nav>
         <header>
             <h1>Személyek adatkezelője!</h1>
         </header>
         <article>
             <div class="d-flex justify-content-around adat_hozzaAd"></div>
-            <div class="container mt-3 lista"></div>
+            <div class="adatok"></div>
         </article>
 
 
