--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,12 @@
 
 <body>
     <main>
+        <nav>
+            <ul>
+                <li><a href="index.html">Admin</a></li>
+                <li><a href="public.html">Publikus</a></li>
+            </ul>
+        </nav>
         <header>
             <h1>Személyek adatkezelője!</h1>
         </header>
